# DevNog

./: .gitignore  CLAUDE.md  LICENSE  README.md  devnog.team.toml  devnog.toml  pyproject.toml
.github/workflows/: publish.yml
examples/sample_project/: api_client.py  config.py  database.py  requirements.txt  security.py  utils.py
src/devnog/: __init__.py
src/devnog/capture/: __init__.py  decorators.py  models.py  replayer.py  serializer.py  store.py
src/devnog/cli/: __init__.py  compliance_cmd.py  dashboard_cmd.py  fix_cmd.py  guardian_cmd.py  history_cmd.py  main.py  qa_cmd.py  scan_cmd.py  undo_cmd.py
src/devnog/core/: __init__.py  config.py  crypto.py  input_resolver.py  license.py  models.py  output.py
src/devnog/dashboard/: __init__.py  server.py
src/devnog/enterprise/: __init__.py  ci_gate.py  compliance.py  team_config.py  trending.py
src/devnog/fix/: __init__.py  ai_fixer.py  applier.py  engine.py  models.py  rule_fixer.py  undo.py
src/devnog/guardian/: __init__.py  audit.py  config.py  context.py  middleware.py  patterns.py
src/devnog/qa/: __init__.py  engine.py
tests/test_capture/: test_decorators.py  test_serializer.py  test_store.py
tests/test_core/: test_config.py  test_input_resolver.py  test_license.py  test_scoring.py
tests/test_enterprise/: test_ci_gate.py  test_compliance.py  test_team_config.py  test_trending.py
tests/test_fix/: test_applier.py  test_rule_fixer.py  test_undo.py
tests/test_guardian/: test_audit.py  test_config.py  test_middleware.py  test_patterns.py
tests/test_integration/: test_scan_fix_rescan.py
tests/test_qa/: test_qa_checks.py  test_qa_engine.py
tests/test_scanner/: test_code_quality.py  test_engine.py  test_error_handling.py  test_security.py
(+19 files in other folders)
