[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devnog"
version = "0.1.0"
description = "Developer's Bulletproofing Toolkit — scan, fix, and ship with confidence"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Luke H"},
]
keywords = ["security", "code-quality", "linter", "fixer", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.40.0",
]
guardian = [
    "starlette>=0.27",
]
enterprise = [
    "reportlab>=4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]
all = [
    "devnog[ai,guardian,enterprise,dev]",
]

[project.scripts]
devnog = "devnog.cli.main:cli"

[project.urls]
Homepage = "https://github.com/mintingpressbuilds/DevNog"
Repository = "https://github.com/mintingpressbuilds/DevNog"
Issues = "https://github.com/mintingpressbuilds/DevNog/issues"
Changelog = "https://github.com/mintingpressbuilds/DevNog/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/devnog"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
